[WIP] bridge done, local deployment tests

--- a/notebooks/import_data.ipynb
+++ b/notebooks/import_data.ipynb
@@ -30,7 +30,7 @@
     "import requests\n",
     "from tqdm import tqdm\n",
     "from openpyxl import load_workbook\n",
-    "from conf import settings as sts"
+    "from app.conf import settings as sts"
    ]
   },
   {
