--- a/notebooks/prices_eda.ipynb
+++ b/notebooks/prices_eda.ipynb
@@ -41,8 +41,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "sns.set_palette('colorblind')\n",
-    "from conf import settings as sts\n",
-    "from conf import utils as uts\n",
+    "from app.conf import settings as sts\n",
+    "from app.conf import utils as uts\n",
     "from unidecode import unidecode\n",
     "import nltk\n",
     "nltk.download('punkt')\n",
