--- a/notebooks/prices_eda.ipynb
+++ b/notebooks/prices_eda.ipynb
@@ -72,17 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "93c70496-0b26-4b78-8f6a-31839829c837",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv(sts.LOCAL_DATA_PATH+sts.FINAL_PRICE_DATASET)"
+    "dataset = uts.load_artifact('prices_dataframe', sts.LOCAL_ARTIFACTS_PATH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "ec4eba72-bacb-4bc4-a129-9228b91ef362",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
        "(554550, 5)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "fbd2f2f2-18d8-495f-825d-4a41abb32c46",
    "metadata": {},
    "outputs": [
@@ -138,65 +138,65 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>VERDURAS Y HORTALIZAS</td>\n",
-       "      <td>Pepino cohombro</td>\n",
-       "      <td>Cúcuta, Cenabastos</td>\n",
-       "      <td>790.0</td>\n",
+       "      <td>2015-01-01 00:00:00</td>\n",
+       "      <td>CARNES</td>\n",
+       "      <td>Alas de pollo con costillar</td>\n",
+       "      <td>Armenia, Mercar</td>\n",
+       "      <td>3800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>PROCESADOS</td>\n",
-       "      <td>Galletas dulces redondas con crema</td>\n",
-       "      <td>Bucaramanga, Centroabastos</td>\n",
-       "      <td>9281.0</td>\n",
+       "      <td>2015-02-01 00:00:00</td>\n",
+       "      <td>CARNES</td>\n",
+       "      <td>Alas de pollo con costillar</td>\n",
+       "      <td>Armenia, Mercar</td>\n",
+       "      <td>3800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>PROCESADOS</td>\n",
-       "      <td>Galletas dulces redondas con crema</td>\n",
-       "      <td>Bucaramanga, Mercados del centro</td>\n",
-       "      <td>9446.0</td>\n",
+       "      <td>2015-03-01 00:00:00</td>\n",
+       "      <td>CARNES</td>\n",
+       "      <td>Alas de pollo con costillar</td>\n",
+       "      <td>Armenia, Mercar</td>\n",
+       "      <td>3850</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>PROCESADOS</td>\n",
-       "      <td>Galletas dulces redondas con crema</td>\n",
-       "      <td>Cartagena, Bazurto</td>\n",
-       "      <td>8591.0</td>\n",
+       "      <td>2015-04-01 00:00:00</td>\n",
+       "      <td>CARNES</td>\n",
+       "      <td>Alas de pollo con costillar</td>\n",
+       "      <td>Armenia, Mercar</td>\n",
+       "      <td>3900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>PROCESADOS</td>\n",
-       "      <td>Galletas dulces redondas con crema</td>\n",
-       "      <td>Cúcuta, Cenabastos</td>\n",
-       "      <td>9558.0</td>\n",
+       "      <td>2015-05-01 00:00:00</td>\n",
+       "      <td>CARNES</td>\n",
+       "      <td>Alas de pollo con costillar</td>\n",
+       "      <td>Armenia, Mercar</td>\n",
+       "      <td>3900</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         date                  group                             product  \\\n",
-       "0  2013-01-01  VERDURAS Y HORTALIZAS                     Pepino cohombro   \n",
-       "1  2013-01-01             PROCESADOS  Galletas dulces redondas con crema   \n",
-       "2  2013-01-01             PROCESADOS  Galletas dulces redondas con crema   \n",
-       "3  2013-01-01             PROCESADOS  Galletas dulces redondas con crema   \n",
-       "4  2013-01-01             PROCESADOS  Galletas dulces redondas con crema   \n",
+       "                  date   group                      product           market  \\\n",
+       "0  2015-01-01 00:00:00  CARNES  Alas de pollo con costillar  Armenia, Mercar   \n",
+       "1  2015-02-01 00:00:00  CARNES  Alas de pollo con costillar  Armenia, Mercar   \n",
+       "2  2015-03-01 00:00:00  CARNES  Alas de pollo con costillar  Armenia, Mercar   \n",
+       "3  2015-04-01 00:00:00  CARNES  Alas de pollo con costillar  Armenia, Mercar   \n",
+       "4  2015-05-01 00:00:00  CARNES  Alas de pollo con costillar  Armenia, Mercar   \n",
        "\n",
-       "                             market  mean_price  \n",
-       "0                Cúcuta, Cenabastos       790.0  \n",
-       "1        Bucaramanga, Centroabastos      9281.0  \n",
-       "2  Bucaramanga, Mercados del centro      9446.0  \n",
-       "3                Cartagena, Bazurto      8591.0  \n",
-       "4                Cúcuta, Cenabastos      9558.0  "
+       "  mean_price  \n",
+       "0       3800  \n",
+       "1       3800  \n",
+       "2       3850  \n",
+       "3       3900  \n",
+       "4       3900  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "cf72cac6-630a-4106-836d-9bb2611f06d4",
    "metadata": {},
    "outputs": [],
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "8bbdfbd8-d884-4489-bf41-df0380b319c3",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,7 @@
      "data": {
       "text/plain": [
        "count                           554550\n",
-       "mean     2017-11-23 10:41:51.761969152\n",
+       "mean     2017-11-23 10:41:51.761969408\n",
        "min                2013-01-01 00:00:00\n",
        "25%                2015-06-01 00:00:00\n",
        "50%                2017-12-01 00:00:00\n",
@@ -242,7 +242,7 @@
        "Name: date, dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "03a1ed9f-71fa-4b4f-9daf-c326b100b9b1",
    "metadata": {},
    "outputs": [],
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "eb897d42-8076-48c5-a60c-fff9da79e792",
    "metadata": {},
    "outputs": [],
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "4c44eff5-3cc6-49ee-997c-85522b093d2e",
    "metadata": {},
    "outputs": [],
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "5b6310d9-517d-4150-a0c0-ae25a8d23fbd",
    "metadata": {},
    "outputs": [],
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "97253c01-f89a-4c19-86e7-668a1201f014",
    "metadata": {},
    "outputs": [
@@ -349,7 +349,7 @@
        "Name: group, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "26fa01a6-1516-4b58-b9bb-e52fff3e50d3",
    "metadata": {},
    "outputs": [
@@ -398,7 +398,7 @@
        "Name: product, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "35a50e89-b0cd-4f40-b74d-6a0caafa44be",
    "metadata": {
     "tags": []
@@ -801,7 +801,7 @@
        " 'zapote']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "1df0e924-63d8-4f99-a485-db263f2393d2",
    "metadata": {},
    "outputs": [
@@ -826,14 +826,14 @@
        "barranquilla barranquillita                 15654\n",
        "                                            ...  \n",
        "san sebastian de mariquita tolima panela        3\n",
-       "barranquilla molino gran senora                 2\n",
        "barranquilla molino el litoral                  2\n",
-       "barranquilla inversiones lache                  2\n",
        "socorro santander panela                        2\n",
+       "barranquilla molino gran senora                 2\n",
+       "barranquilla inversiones lache                  2\n",
        "Name: market, Length: 102, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "3b9f1297-79fa-4596-827a-ea3383837c44",
    "metadata": {},
    "outputs": [
@@ -873,7 +873,7 @@
        "Name: department, Length: 69, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "6bab913d-4846-4858-a1ba-28ebeeb200a4",
    "metadata": {},
    "outputs": [],
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "5cb5597b-3448-45c3-ace9-f01e954b29ed",
    "metadata": {},
    "outputs": [],
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "id": "e119f3c4-f03c-4dba-a8eb-24558e24d3aa",
    "metadata": {},
    "outputs": [],
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "id": "6aae4921-aa44-448f-b590-c47646a683b5",
    "metadata": {},
    "outputs": [],
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 25,
    "id": "117f933b-b13a-49e3-a988-026d2c978ee8",
    "metadata": {},
    "outputs": [
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "54075df4-b5aa-4b62-8f5e-a603e6d8dd04",
    "metadata": {},
    "outputs": [],
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "id": "b5d52433-34c2-4601-9d7c-726f339b1583",
    "metadata": {},
    "outputs": [],
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "id": "057d9792-e11f-4386-819c-297269652916",
    "metadata": {},
    "outputs": [
@@ -1029,7 +1029,7 @@
        "(119, 6541)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "2a913a2c-2a52-4acd-9821-8c3c99608b49",
    "metadata": {},
    "outputs": [
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "id": "3b62d14a-20a0-4d7e-adf7-69fe73ae14be",
    "metadata": {},
    "outputs": [
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "id": "ecc64c66-c89f-4fd4-996f-8b2a7f58821e",
    "metadata": {},
    "outputs": [
@@ -1113,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
    "id": "68919a76-7ede-4684-be52-e30ab1866e13",
    "metadata": {},
    "outputs": [],
@@ -1124,7 +1124,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
+   "id": "da928520-4410-4bfc-9e38-1bb5d99b9400",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5216327778627121"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dataset_pivot[-36:].dropna(axis = 1).columns) / dataset_pivot.shape[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "0881fd7d-8613-48ad-ab17-df2aed3396a9",
    "metadata": {},
    "outputs": [
@@ -1134,7 +1155,7 @@
        "(119, 3412)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1145,21 +1166,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 50,
    "id": "82d6964f-f2ac-4db3-bd79-51bd02485369",
    "metadata": {},
    "outputs": [],
    "source": [
     "dataset_filtered = dataset_pivot_filtered.unstack().reset_index(['group', 'product', 'market'])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9cade318-2350-4cf6-98c6-35b4aae14657",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
