[ADD] train model task

--- a/notebooks/multi_ts_forecast.ipynb
+++ b/notebooks/multi_ts_forecast.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "id": "b8bbdd0a-d614-40e5-a280-1c840188250d",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "id": "16bd7203-7210-42be-a3d0-95f9397acf7d",
    "metadata": {},
    "outputs": [],
@@ -64,17 +64,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "id": "b7cf54d5-7795-4542-8dd5-62b359debd2f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_filtered = pd.read_csv(sts.LOCAL_DATA_PATH+\"final_prices_dataset_filtered.csv\")"
+    "dataset_filtered = uts.load_artifact('prices_dataframe', sts.LOCAL_ARTIFACTS_PATH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "id": "851e3c07-b182-4a41-a9d8-96bcba712525",
    "metadata": {},
    "outputs": [
@@ -110,64 +110,57 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2013-01-01</td>\n",
-       "      <td>verduras y hortalizas</td>\n",
-       "      <td>pepino cohombro</td>\n",
-       "      <td>cucuta cenabastos</td>\n",
-       "      <td>790.0</td>\n",
+       "      <td>carnes</td>\n",
+       "      <td>alas de pollo con costillar</td>\n",
+       "      <td>armenia mercar</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2013-02-01</td>\n",
-       "      <td>verduras y hortalizas</td>\n",
-       "      <td>pepino cohombro</td>\n",
-       "      <td>cucuta cenabastos</td>\n",
-       "      <td>638.0</td>\n",
+       "      <td>carnes</td>\n",
+       "      <td>alas de pollo con costillar</td>\n",
+       "      <td>armenia mercar</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2013-03-01</td>\n",
-       "      <td>verduras y hortalizas</td>\n",
-       "      <td>pepino cohombro</td>\n",
-       "      <td>cucuta cenabastos</td>\n",
-       "      <td>705.0</td>\n",
+       "      <td>carnes</td>\n",
+       "      <td>alas de pollo con costillar</td>\n",
+       "      <td>armenia mercar</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2013-04-01</td>\n",
-       "      <td>verduras y hortalizas</td>\n",
-       "      <td>pepino cohombro</td>\n",
-       "      <td>cucuta cenabastos</td>\n",
-       "      <td>518.0</td>\n",
+       "      <td>carnes</td>\n",
+       "      <td>alas de pollo con costillar</td>\n",
+       "      <td>armenia mercar</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2013-05-01</td>\n",
-       "      <td>verduras y hortalizas</td>\n",
-       "      <td>pepino cohombro</td>\n",
-       "      <td>cucuta cenabastos</td>\n",
-       "      <td>550.0</td>\n",
+       "      <td>carnes</td>\n",
+       "      <td>alas de pollo con costillar</td>\n",
+       "      <td>armenia mercar</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         date                  group          product             market  \\\n",
-       "0  2013-01-01  verduras y hortalizas  pepino cohombro  cucuta cenabastos   \n",
-       "1  2013-02-01  verduras y hortalizas  pepino cohombro  cucuta cenabastos   \n",
-       "2  2013-03-01  verduras y hortalizas  pepino cohombro  cucuta cenabastos   \n",
-       "3  2013-04-01  verduras y hortalizas  pepino cohombro  cucuta cenabastos   \n",
-       "4  2013-05-01  verduras y hortalizas  pepino cohombro  cucuta cenabastos   \n",
-       "\n",
-       "   mean_price  \n",
-       "0       790.0  \n",
-       "1       638.0  \n",
-       "2       705.0  \n",
-       "3       518.0  \n",
-       "4       550.0  "
+       "        date   group                      product          market mean_price\n",
+       "0 2013-01-01  carnes  alas de pollo con costillar  armenia mercar        NaN\n",
+       "1 2013-02-01  carnes  alas de pollo con costillar  armenia mercar        NaN\n",
+       "2 2013-03-01  carnes  alas de pollo con costillar  armenia mercar        NaN\n",
+       "3 2013-04-01  carnes  alas de pollo con costillar  armenia mercar        NaN\n",
+       "4 2013-05-01  carnes  alas de pollo con costillar  armenia mercar        NaN"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "id": "1fc56a4a-8079-49e1-bdf2-c255d43b0562",
    "metadata": {},
    "outputs": [],
@@ -206,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "id": "6d2d2ed0-c4e1-4a33-ac81-ffa4773c40ea",
    "metadata": {},
    "outputs": [],
@@ -220,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "id": "9be11c12-9cd5-4a3f-b8e9-d91a03349329",
    "metadata": {},
    "outputs": [],
@@ -230,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "id": "43be5f8a-77c2-458b-b7e2-06e42042bdec",
    "metadata": {},
    "outputs": [
@@ -240,7 +233,7 @@
        "(8, 319, 72)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "id": "26594b21-cda7-485d-b310-b64dd3296637",
    "metadata": {},
    "outputs": [],
@@ -269,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "id": "db6e4a17-1707-41b9-8346-8aa84781609f",
    "metadata": {},
    "outputs": [],
@@ -279,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "id": "9745dd40-326c-49b3-b0a2-ac8d05f4e224",
    "metadata": {},
    "outputs": [],
@@ -294,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "id": "61d3e6bc-72df-4fe7-a80c-8668f9b3b948",
    "metadata": {},
    "outputs": [],
@@ -304,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "id": "1f4277fe-e2cd-43fc-8bb0-e0d3f39d4db0",
    "metadata": {
     "tags": []
@@ -314,7 +307,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3412/3412 [00:32<00:00, 103.54it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3412/3412 [00:31<00:00, 107.61it/s]\n"
      ]
     }
    ],
@@ -322,9 +315,9 @@
     "for series_id, series_df in tqdm(dataset_filtered.groupby('series_id')):\n",
     "    series_df.set_index('date', inplace=True)\n",
     "    group = series_df['group'].unique()[0]\n",
-    "    y = series_df['mean_price']\n",
+    "    y = series_df['mean_price'].astype(float)\n",
     "    date_range_idx = get_date_range(y.first_valid_index())\n",
-    "    y = y.reindex(date_range_idx).interpolate()\n",
+    "    y = y.reindex(date_range_idx).interpolate('linear')\n",
     "    \n",
     "    X_1, X_fore_1 = muts.get_X_det(y, forecast_steps = 1)\n",
     "    model_1, y_pred_1, residuals = muts.get_model(y, X_1, LinearRegression(), return_residuals = True)\n",
@@ -347,6 +340,37 @@
     "    multi_X_2.append(X_2)\n",
     "    multi_X_fore_2.append(X_fore_2)\n",
     "    multi_y_2.append(y_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "f4b2717f-47d8-4c40-aab6-e6658ea56da6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = y.reindex(date_range_idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "84b7cb66-a442-43e8-b1f2-3c216564db09",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.astype(float).interpolate().isna().sum()"
    ]
   },
   {
