[ADD] command args to task runs and model eval nb

--- a/notebooks/multi_ts_forecast.ipynb
+++ b/notebooks/multi_ts_forecast.ipynb
@@ -75,7 +75,9 @@
   {
    "cell_type": "markdown",
    "id": "a05df94c-d8fa-4e4f-a62a-b86a05d94d7c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### Import Historical Data"
    ]
