[ADD] Fit and Eval method to mymodel

--- a/notebooks/api_test.ipynb
+++ b/notebooks/api_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "a8c05da2-b3ea-4a35-9930-394c4220861c",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
+   "id": "5bec7ae6-cb50-4be4-b35c-2da8066e8868",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append('/Users/felipegonzalez/repos/colombian_food_prices/app')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "777cb5f0-b813-49c5-8b56-2725f1848c16",
    "metadata": {},
    "outputs": [],
@@ -24,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "37a2944a-c338-42ae-ba19-08cb0bff252e",
    "metadata": {},
    "outputs": [],
@@ -34,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "afa375f8-644c-4f8f-9dd0-502c20b5429b",
    "metadata": {},
    "outputs": [],
@@ -44,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "76440f31-0a26-45db-b956-35bcf41c8832",
    "metadata": {},
    "outputs": [
@@ -53,7 +64,14 @@
       "text/plain": [
        "{'model_name': 'Next-Month Colombian Fruit and Veg Prices Predictor',\n",
        " 'model_version': '1',\n",
-       " 'forecast_date': '2022-12'}"
+       " 'forecast_date': '2023-01',\n",
+       " 'last_month_mape': {'mape_mean': 0.127,\n",
+       "  'mape_std': 0.155,\n",
+       "  'mape_min': 0.0,\n",
+       "  'mape_25%': 0.026,\n",
+       "  'mape_50%': 0.071,\n",
+       "  'mape_75%': 0.168,\n",
+       "  'mape_max': 1.752}}"
       ]
      },
      "metadata": {},
@@ -74,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "1291fc79-be84-47dc-9009-134d78d2c336",
    "metadata": {},
    "outputs": [],
@@ -84,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "a09f8a7f-fb06-4fa2-8e83-41f7a59e906d",
    "metadata": {},
    "outputs": [],
@@ -94,94 +112,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "113165f2-f546-4253-b496-b86958296dc7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'arauca arauca': {'point': 3840.819580318331,\n",
-       "  'lower': 3558.316239004425,\n",
-       "  'upper': 4123.322921632237},\n",
-       " 'armenia mercar': {'point': 2984.1795810787207,\n",
-       "  'lower': 2628.677627723331,\n",
-       "  'upper': 3339.6815344341103},\n",
-       " 'bogota dc corabastos': {'point': 3478.192479016612,\n",
-       "  'lower': 2838.237805999047,\n",
-       "  'upper': 4118.147152034177},\n",
-       " 'bucaramanga centroabastos': {'point': 2953.8268285818085,\n",
-       "  'lower': 2547.3773874169274,\n",
-       "  'upper': 3360.2762697466896},\n",
-       " 'buenaventura valle del cauca': {'point': 4083.5405386689445,\n",
-       "  'lower': 3709.343227530293,\n",
-       "  'upper': 4457.737849807596},\n",
-       " 'cali cavasa': {'point': 2923.451723413738,\n",
-       "  'lower': 2524.9394716489824,\n",
-       "  'upper': 3321.9639751784935},\n",
-       " 'cartago valle del cauca': {'point': 3581.919868530027,\n",
-       "  'lower': 3207.8938890413297,\n",
-       "  'upper': 3955.9458480187245},\n",
-       " 'chiquinquira boyaca': {'point': 2865.082144286039,\n",
-       "  'lower': 2283.7148617156636,\n",
-       "  'upper': 3446.449426856414},\n",
-       " 'cucuta cenabastos': {'point': 4306.4809272331795,\n",
-       "  'lower': 3951.7183618380964,\n",
-       "  'upper': 4661.243492628263},\n",
-       " 'ibague plaza la 21': {'point': 2608.237649062954,\n",
-       "  'lower': 2277.7746574856883,\n",
-       "  'upper': 2938.7006406402197},\n",
-       " 'la ceja antioquia': {'point': 2604.3472338527904,\n",
-       "  'lower': 2286.2155088412906,\n",
-       "  'upper': 2922.4789588642902},\n",
-       " 'manizales centro galerias': {'point': 2699.5545532571764,\n",
-       "  'lower': 2292.7535883641794,\n",
-       "  'upper': 3106.3555181501733},\n",
-       " 'medellin plaza minorista jose maria villa': {'point': 2241.5709857896686,\n",
-       "  'lower': 1957.2531550719746,\n",
-       "  'upper': 2525.8888165073627},\n",
-       " 'palmira valle del cauca': {'point': 2756.697457609837,\n",
-       "  'lower': 2410.6840194032106,\n",
-       "  'upper': 3102.710895816463},\n",
-       " 'pamplona norte de santander': {'point': 3833.156304373692,\n",
-       "  'lower': 3481.7137690967365,\n",
-       "  'upper': 4184.598839650647},\n",
-       " 'pasto el potrerillo': {'point': 2727.4784753104173,\n",
-       "  'lower': 2438.6639492698005,\n",
-       "  'upper': 3016.293001351034},\n",
-       " 'pereira la 41': {'point': 3386.209265294866,\n",
-       "  'lower': 3040.5450082249313,\n",
-       "  'upper': 3731.8735223648005},\n",
-       " 'pereira mercasa': {'point': 3181.6814341374393,\n",
-       "  'lower': 2816.122951422739,\n",
-       "  'upper': 3547.2399168521397},\n",
-       " 'popayan plaza de mercado del barrio bolivar': {'point': 3932.603242741012,\n",
-       "  'lower': 3552.1122592391584,\n",
-       "  'upper': 4313.094226242865},\n",
-       " 'rionegro antioquia': {'point': 3164.963127161417,\n",
-       "  'lower': 2837.112670284909,\n",
-       "  'upper': 3492.813584037925},\n",
-       " 'san gil santander': {'point': 3534.24148696261,\n",
-       "  'lower': 3109.9580481293115,\n",
-       "  'upper': 3958.5249257959085},\n",
-       " 'socorro santander': {'point': 2886.4125094898354,\n",
-       "  'lower': 2462.2069496102376,\n",
-       "  'upper': 3310.618069369433},\n",
-       " 'tulua valle del cauca': {'point': 3136.609868632241,\n",
-       "  'lower': 2717.600311337758,\n",
-       "  'upper': 3555.6194259267245},\n",
-       " 'tunja complejo de servicios del sur': {'point': 3308.7752805509485,\n",
-       "  'lower': 2859.678772665311,\n",
-       "  'upper': 3757.871788436586},\n",
-       " 'tuquerres narino': {'point': 3496.695171507094,\n",
-       "  'lower': 3285.1126429823025,\n",
-       "  'upper': 3708.2777000318856},\n",
-       " 'villavicencio cav': {'point': 2947.9026383917826,\n",
-       "  'lower': 2367.431047425533,\n",
-       "  'upper': 3528.374229358032},\n",
-       " 'yopal casanare': {'point': 2533.562260000911,\n",
-       "  'lower': 2055.5685205985546,\n",
-       "  'upper': 3011.5559994032674}}"
+       "{'arauca arauca': {'point': 3455.602422888044,\n",
+       "  'lower': 2799.33331051934,\n",
+       "  'upper': 4111.871535256749},\n",
+       " 'armenia mercar': {'point': 3134.714276483009,\n",
+       "  'lower': 2282.8951302060887,\n",
+       "  'upper': 3986.5334227599296},\n",
+       " 'bogota dc corabastos': {'point': 3494.9838107299806,\n",
+       "  'lower': 2144.620053213036,\n",
+       "  'upper': 4845.347568246925},\n",
+       " 'bucaramanga centroabastos': {'point': 3378.603046898516,\n",
+       "  'lower': 2441.06331237811,\n",
+       "  'upper': 4316.142781418922},\n",
+       " 'buenaventura valle del cauca': {'point': 3735.7073940728587,\n",
+       "  'lower': 2892.9404128400893,\n",
+       "  'upper': 4578.474375305628},\n",
+       " 'cali cavasa': {'point': 2971.7011473706334,\n",
+       "  'lower': 2118.276499083039,\n",
+       "  'upper': 3825.1257956582276},\n",
+       " 'cartago valle del cauca': {'point': 3472.0945330399163,\n",
+       "  'lower': 2548.9475116085746,\n",
+       "  'upper': 4395.241554471258},\n",
+       " 'chiquinquira boyaca': {'point': 3272.9913324991862,\n",
+       "  'lower': 1968.2236231767033,\n",
+       "  'upper': 4577.75904182167},\n",
+       " 'cucuta cenabastos': {'point': 3585.5661198846256,\n",
+       "  'lower': 2785.517803250369,\n",
+       "  'upper': 4385.614436518882},\n",
+       " 'ibague plaza la 21': {'point': 3002.918091097463,\n",
+       "  'lower': 2255.372482397219,\n",
+       "  'upper': 3750.463699797707},\n",
+       " 'la ceja antioquia': {'point': 3259.854881376662,\n",
+       "  'lower': 2582.807082591178,\n",
+       "  'upper': 3936.9026801621458},\n",
+       " 'manizales centro galerias': {'point': 3127.130001452543,\n",
+       "  'lower': 2254.34748777764,\n",
+       "  'upper': 3999.9125151274466},\n",
+       " 'medellin plaza minorista jose maria villa': {'point': 2867.171713141118,\n",
+       "  'lower': 2191.6787883215593,\n",
+       "  'upper': 3542.6646379606764},\n",
+       " 'palmira valle del cauca': {'point': 3089.1046072320532,\n",
+       "  'lower': 2223.088696890527,\n",
+       "  'upper': 3955.1205175735795},\n",
+       " 'pamplona norte de santander': {'point': 3635.3337492330634,\n",
+       "  'lower': 2837.6754385326185,\n",
+       "  'upper': 4432.992059933508},\n",
+       " 'pasto el potrerillo': {'point': 3160.4129003585313,\n",
+       "  'lower': 2568.702953661064,\n",
+       "  'upper': 3752.1228470559986},\n",
+       " 'pereira la 41': {'point': 3201.0062857655985,\n",
+       "  'lower': 2391.6712054819636,\n",
+       "  'upper': 4010.3413660492333},\n",
+       " 'pereira mercasa': {'point': 3491.9810462482133,\n",
+       "  'lower': 2593.785753646065,\n",
+       "  'upper': 4390.176338850361},\n",
+       " 'popayan plaza de mercado del barrio bolivar': {'point': 3715.9713895781997,\n",
+       "  'lower': 2803.2030288097285,\n",
+       "  'upper': 4628.739750346671},\n",
+       " 'rionegro antioquia': {'point': 3311.2127110375072,\n",
+       "  'lower': 2657.7657212413924,\n",
+       "  'upper': 3964.659700833622},\n",
+       " 'san gil santander': {'point': 3141.4496230496025,\n",
+       "  'lower': 2188.9924439964398,\n",
+       "  'upper': 4093.906802102765},\n",
+       " 'socorro santander': {'point': 3102.2416744344664,\n",
+       "  'lower': 2094.0523890524496,\n",
+       "  'upper': 4110.430959816484},\n",
+       " 'tulua valle del cauca': {'point': 3576.7804354100163,\n",
+       "  'lower': 2578.56618718497,\n",
+       "  'upper': 4574.994683635063},\n",
+       " 'tunja complejo de servicios del sur': {'point': 3075.8426495683416,\n",
+       "  'lower': 1995.0369293953615,\n",
+       "  'upper': 4156.648369741321},\n",
+       " 'tuquerres narino': {'point': 3441.8332112272456,\n",
+       "  'lower': 2977.294662971984,\n",
+       "  'upper': 3906.371759482507},\n",
+       " 'villavicencio cav': {'point': 3331.909222419721,\n",
+       "  'lower': 1968.973578001935,\n",
+       "  'upper': 4694.844866837508},\n",
+       " 'yopal casanare': {'point': 2743.6787890362484,\n",
+       "  'lower': 1624.652534060919,\n",
+       "  'upper': 3862.705044011578}}"
       ]
      },
      "metadata": {},
@@ -202,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "fff74c45-9746-4026-93fe-e4fd2d1543d9",
    "metadata": {},
    "outputs": [],
@@ -212,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "id": "9b547ec2-9b6b-43e8-8183-26eac6e81c7b",
    "metadata": {},
    "outputs": [],
@@ -222,16 +240,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "id": "ef9e2d80-3188-491b-b3b5-f838c19e0b37",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'point': 3496.695171507094,\n",
-       " 'lower': 3285.1126429823025,\n",
-       " 'upper': 3708.2777000318856}"
+       "{'point': 3441.8332112272456,\n",
+       " 'lower': 2977.294662971984,\n",
+       " 'upper': 3906.371759482507}"
       ]
      },
      "metadata": {},
